--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.1.2",
     "@angular/platform-browser-dynamic": "^18.1.2",
     "@angular/router": "^18.1.2",
+    "date-fns": "^3.6.0",
     "mini.css": "^3.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
